tests/miniJava/neg/000402_mutation.MiniJava
class java { public static void Main ( String [ public java ) { { } } }
